styles.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Nov 8, 2019, 1:33:01 PM
    Author     : palma
*/

html {
    height: 100%;
    margin: auto;
    font-family: 'Lato', sans-serif;    
}

body { text-align: center;}

.apppart {padding: 1px; border: 1px solid #808080; margin: 0px; background-color:#d0f0c0;}
.apppart-cosmetic {padding: 1px; border: 1px solid #aaaaaa; margin:0px; background-color:#33FFD7;}
.apppart-hidden {padding: 1px; border: 1px solid #aaaaaa; margin:0px; background-color:#FFD433;}
.apppart-deleted { padding: 1px; border: 1px solid #aaaaaa; margin:0px; background-color:#FF5533;}

a:link {color: blue; text-decoration: none;}
a:visited {color: blue; text-decoration: none;}
a:hover {color: gray; text-decoration: none;}
a:active {color: blue; text-decoration: none;}

.button a:link, .button a:visited {
    color: black; 
    text-decoration: none;
    display: flex;
    flex: 1 0 auto;
    justify-content: center;
    padding-left: 0.5em;
    padding-right: 0.5em;
    padding-bottom: 0.1em;
    padding-top: 0.1em;
    margin: 0;
    outline: black solid 1px;
}

.button a:hover, .button a:active {
    background-color: #111;
    color: white;
}

table {border-collapse: collapse;}
table, th, td {border: 1px solid black;}

.topnav {
    overflow: hidden;
    background-color: #333;
}

.topnav a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.topnav a:hover {
    background-color: #111;
    color: white;
}

.topnav a.navActive {
    background-color: #1469a9;
    color: white;
}

.topnav .icon {
    display: none;
}

.wrapper {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-content: center;
    text-align: center;
    min-height: 100%;
    padding-bottom: 2.5rem;    /* Footer height */
}

.wrapper > * {
    padding: 10px;
    flex: 1 100%;
}

@media all and (max-width: 600px) {
    .topnav a:not(:first-child) {display: none;}
    .topnav a.icon {
        float: right;
        display: block;
    }
    .wrapper { flex-direction: column; }
    
    .contentMain .showRow { 
        display: flex; 
        flex-direction: column;
        flex-wrap: wrap;
        justify-content: center; 
        flex: 1 auto;
    }
    .contentRight { display: none; }
    .button a:link, .button a:visited {
        font-size: 2.25em;
    }
    .mobile {
        display: none; 
    }
}

@media all and (max-width: 600px) {
    .topnav.responsive {position: relative;}
    .topnav.responsive .icon {
        position: absolute;
        right: 0;
        top: 0;
    }
    .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
}

@media all and (max-width: 800px) {
    .wrapper { flex-flow: row wrap; }
    .contentMain { flex: 2; }
    .contentLeft { order: 3; }
    .contentMain { order: 1; }
    .contentRight { order: 2; }
    .footer { order: 4; }
}

@media screen and (min-width: 601px) and (max-width: 800px) {
    .topnav {
        display: flex;
        flex-flow: row wrap;
        justify-content: space-around;
    }
    .contentMain { 
         display: flex; 
         flex-direction: row;
         flex-flow: wrap;
         justify-content: center; 
         flex: 1 auto; 
    }
    .contentLeft, .contentRight {
        display: flex;
        outline: dotted whitesmoke; 
        display: flex;
        justify-content: center;
    }
}

@media all and (min-width: 801px) {
    .contentMain { 
        display: flex;
        flex-direction: column;
        justify-content: center;
        flex: 2 auto;
    }
    .contentLeft, .contentRight {
        display: flex;
        flex-direction: column;
        outline: dotted whitesmoke;
        justify-content: flex-start;
    }
    .contentLeft { flex: 1 auto;}
    .contentRight { flex: 1 auto;}
}

.showRow {flex-direction: row;}

/*
.contentMain {
    display: flex;
    flex-direction: column wrap;
    justify-content: center;
    align-self: center;
    flex-grow: 2;
}
*/
h1 {text-align: center;}

.footer {
    text-align: center;
    width: 99%;
    height: 2.5rem;            /* Footer height */
}

